correction contraste et taille font

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("../img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -507,7 +506,7 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
+    opacity: 1;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
@@ -642,7 +641,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #020202!important;
 }
 
 .container {
@@ -668,7 +667,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -762,15 +761,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #754a37;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #754a37;
     color: #FFFFFF!important;
 }
 
@@ -788,7 +787,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #754a37!important;
 }
 
 .ltc-atomic-tangerine:hover {
